Added boolean[] selectedTables to Constructor. Implemented an Additional Condition in do Loop in Method run() for Excluding Search of Tables As Defined by New Class Instance selectedTables.